# solana-memo-indexer

./: .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  README.md  demo.sh  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
indexer/src/: config.ts  index.ts  logger.ts  reconcile.ts
indexer/src/decode/: memo.ts
indexer/src/health/: server.ts  tracker.ts
indexer/src/store/: redis.ts
indexer/src/stream/: factory.ts  laserstream.ts  types.ts
indexer/test/: helpers.ts
indexer/test/decode/: memo.test.ts
indexer/test/integration/: pipeline.test.ts
indexer/test/reconcile/: reconcile.test.ts
indexer/test/store/: redis.test.ts
programs/memo_store/: Cargo.toml
programs/memo_store/src/: error.rs  events.rs  lib.rs  state.rs
programs/memo_store/src/instructions/: close_memo.rs  mod.rs  store_memo.rs
shared/: program.ts
tests/: main.test.ts
tests/memo_store/unit/: closeMemo.test.ts  storeMemo.test.ts
