[package]
name = "memo_store"
version = "0.1.0"
description = "Solana program for storing text memos onchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memo_store"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
event-cpi = ["anchor-lang/event-cpi"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
